--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,6 +66,10 @@
         </nav>
 
         </div>
+		
+		
+		
+		<!--此处重新定义
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
@@ -78,14 +82,28 @@
             </p>
         	<div align="right">
     			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
+		-->
           <!-- 访问统计 -->
+		<!--
           <span id="busuanzi_container_site_pv">
             本站总访问量
             <span id="busuanzi_value_site_pv"></span>次
           </span>
 
-        </div>
+			</div>
         <div>
+		-->
+		 <div align="center" class = "footer_div">  
+           <p class="copyright text-muted">
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} &emsp;&emsp;博客模板由<a href="http://baixin.io/">leopardpan</a>提供
+            </p>
+        	<div align="center">
+    			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+				<p> 技术交流QQ:&emsp;1020898982</p>
+
+			</div>
+        <div>
+		
+		
     </footer>
 </section>
